--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexis IT</title>
+    <title>Minha Página Web</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link para o CSS externo -->
 </head>
 <body>
@@ -14,23 +14,24 @@
         <!-- Barra de Navegação -->
         <header class="top-bar">
             <div class="logo">
-                <img src="icone.png" alt="Logo"> <!-- Substitua "logo.png" pelo caminho correto da sua imagem -->
+                <img src="icone.png" alt="Logo"> 
             </div>
             <nav class="navigation">
                 <ul>
-                    <li><a href="#banner">INÍCIO</a></li> <!-- Atualizado para direcionar ao banner -->
+                    <li><a href="#banner">INÍCIO</a></li>
                     <li><a href="#servicos">SERVIÇOS</a></li>
-                    <li><a href="#sobre-nos">SOBRE NÓS</a></li> <!-- Corrigido para linkar à seção no final da página -->
+                    <li><a href="#sobre-nos">SOBRE NÓS</a></li>
                     <li><a href="#contato">CONTATO</a></li>
                 </ul>
             </nav>
         </header>
         
+        
         <!-- Banner Principal -->
         <section class="banner" id="banner"> <!-- Adicionado ID 'banner' -->
             <img src="banner.jpg" alt="Imagem de Banner"> <!-- Coloque aqui o caminho para sua imagem de banner -->
             <div class="banner-text">NEXIS IT</div>
-            <div class="banner-subtext">A SUA SOLUÇÃO EM SUPORTE TÉCNICO E INFRAESTRUTURA DE REDES</div>
+            <div class="banner-subtext"><br>A SUA SOLUÇÃO EM SUPORTE TÉCNICO E INFRAESTRUTURA DE REDES</div>
         </section>
 
         <!-- CONTEUDO SUPORTE -->
