--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         
         
-        <!-- Banner Principal -->
+        <!--- Banner Principal --->
         <section class="banner" id="banner"> <!-- Adicionado ID 'banner' -->
             <img src="banner.jpg" alt="Imagem de Banner"> <!-- Coloque aqui o caminho para sua imagem de banner -->
             <div class="banner-text">NEXIS IT</div>
