--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXIS IT</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link para o CSS externo -->
+
+    <!-- Link para o favicon -->
+    <link rel="icon" type="image/png" href="icone.png">
 </head>
 <body>
 
